# essa-editor

./: .gitignore  README.md  essaedit.py  logo.txt  pyproject.toml  requirements.txt  test_wordwrap.py
essa/: essa.py
